# taskdown

./: .gitignore  AGENTS.md  CLAUDE.md  initial-spec.md  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.workspace.ts
.claude/commands/: review-comments.md
.claude/rules/: implementation.md  pr-workflow.md
.github/workflows/: test.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: EmptyState.tsx  ErrorBoundary.tsx  Toast.tsx  index.ts
apps/desktop/src/db/: database.ts  index.ts
apps/desktop/src/hooks/: useTheme.ts
apps/desktop/src/lib/: index.ts  migrations.ts  queryClient.tsx  queryKeys.ts  vault.ts
apps/desktop/src/stores/: appStore.test.ts  appStore.ts  index.ts  sidebarStore.test.ts  sidebarStore.ts  taskStore.test.ts  taskStore.ts
apps/desktop/src/testing/: renderWithProviders.tsx  setup.ts  zustand.ts
apps/desktop/src/views/: InboxView.tsx  (+4 more)
openspec/: project.md
openspec/adrs/: 001-react-version.md  002-tauri-desktop-framework.md  003-markdown-editor.md  004-database-strategy.md  005-drag-and-drop.md  006-styling-solution.md  007-monorepo-structure.md  README.md
openspec/changes/add-taskdown-mvp/: design.md  proposal.md  tasks.md
tooling/eslint/: index.js  package.json
tooling/typescript/: package.json  tsconfig.base.json
(+40 files in other folders)
